--- a/04_livrable/website/punr/punr_style.css
+++ b/04_livrable/website/punr/punr_style.css
@@ -138,6 +138,8 @@ div.legals{
 	flex-grow: 1;
 	align-content: baseline;
 	justify-content: right;
+	border-top: 1px solid #000;
+	border-right: 1px solid #000;
 /*voir reppol.css*/
 }
 div.legals img{
@@ -290,12 +292,13 @@ section.extract_section{
 /*	position: fixed;*/
 	z-index: 999;
 	position: fixed;
-	width: 40%;
+	width: 35%;
 	background-color: #fff;
 	bottom:0;
 	right: 0;
 	box-shadow: -5px -5px 7px  #666;
 	border-top-left-radius: 15px;
+	overflow: auto;
 
 /*	dégager la section, le centrer sur la page*/
 }
@@ -307,8 +310,12 @@ section.extract_section{
 	padding-right: 10px;
 	width: 100%;
 	text-align: right;
+	cursor: pointer;
 }
-
+.editor{
+	font-size: 9pt;
+	text-indent: 5px;
+}
 
 
 
