--- a/04_livrable/website/punr/punr_style.css
+++ b/04_livrable/website/punr/punr_style.css
@@ -299,6 +299,7 @@ section.extract_section{
 	box-shadow: -5px -5px 7px  #666;
 	border-top-left-radius: 15px;
 	overflow: auto;
+	max-height: 500px;
 
 /*	dégager la section, le centrer sur la page*/
 }
@@ -316,6 +317,17 @@ section.extract_section{
 	font-size: 9pt;
 	text-indent: 5px;
 }
+
+
+.Axi0{color:#f00;}
+.Axi1{color:#000;}
+.Axi2{color:#0f0;}
+.Axi3{color:#00f;}
+.Ref0{color:#954600;}
+.Ref1{color:#8b5d35;}
+.Ref2{color:#d1613f;}
+.Ref3{color:#ff6c00;}
+.Ref4{color:#ffd700;}
 
 
 
