--- a/04_livrable/website/punr/punr_style.css
+++ b/04_livrable/website/punr/punr_style.css
@@ -9,6 +9,18 @@ body{
 /*	display: flex;*/
 /*	flex-wrap: wrap;*/
 }
+.darkmode{
+	background-color: #2E2E2E;
+	color: #F2F2F2;
+}
+.darkmode .legals img{
+	filter: invert(1);
+}
+.darkmode footer img{
+	filter: invert(1);
+	
+}
+
 
 header{
 	margin: 0;
@@ -17,6 +29,7 @@ header{
 	display: flex;
 	flex-wrap: wrap;
 	border-bottom: 3px solid #000;
+	background-color: inherit;
 }
 .header_div{
 	width: 100%;
@@ -40,15 +53,18 @@ nav{
 	font-size: 20pt;
 /*	max-width: 50%;*/
 	text-align: center;
+	background-color: inherit;
 }
 .nav_top ul{
 	height: 100px;
 	display: flex;
+	background-color: inherit;
 
 }
 .nav_top ul li{
 	height: 100px;
 	border-right: 1px solid #000;
+	background-color: inherit;
 }
 .nav_top ul li a {
 	width: 100%;
@@ -61,12 +77,13 @@ nav{
 /*	display: flex;*/
 	z-index: 999;
 	position: absolute;
-	width: 100%;
+/*	width: 100%;*/
 	display: none;
 	padding: 0;
 	font-size: 10pt;
 	margin: 0;
 	font-family: inherit;
+	background-color: inherit;
 }
 .nav_top ul li ol li {
 	list-style: none;
@@ -75,18 +92,22 @@ nav{
 	border-bottom: 1px solid #000;
 	height: fit-content;
 	list-style-position: inside;
-	background-color: #fff;
+	background-color: inherit;
 
 /*	font-size: 11pt;*/
 }
 .nav_top ul li ol li:nth-child(2n){
-	background-color: #bbb;
+	background-color: #666;
+}
+.nav_top ul li ol li:hover{
+/*	background-color: #888!important;	*/
+	border-left: 6px solid black;
 }
 .nav_top ul li ol li a{
 	padding: 0;
 	font-size: 10pt;
 	text-decoration: none;
-	color: #000;
+	color: inherit;
 }
 .nav_top ul li:hover ol {
 	display: block;
@@ -142,6 +163,13 @@ div.legals{
 	border-right: 1px solid #000;
 /*voir reppol.css*/
 }
+button.darkbutton{
+	border: none;
+	color: inherit;
+	background-color: inherit;
+	cursor: pointer;
+}
+
 div.legals img{
 	height: 32px;
 }
@@ -198,6 +226,8 @@ div.articlenavs a{
 div.corpus{
 	display: flex;
 /*	margin: 0px 100px 0px 100px;*/
+	background-color: inherit;
+	color: inherit;
 }
 
 .ch_nav{
@@ -219,7 +249,7 @@ a.preceding, a.following{
 	font-weight: bold;
 	font-family: helvetica sans-serif;
 	text-decoration: none;
-	color: initial;
+	color: inherit;
 	display: block;
 }
 a.preceding{
@@ -278,7 +308,7 @@ section.extract_section{
 	bottom: 0;
 	right: 0;
 	z-index: 999;
-	background-color: #fff;
+	background-color: inherit;
 	display: flex;
 	flex-flow: row-reverse;
 	max-width: 35%;
@@ -298,7 +328,7 @@ section.extract_section{
 /*	z-index: 999;*/
 /*	position: fixed;*/
 	width: 35%;
-	background-color: #fff;
+	background-color: inherit;
 /*	bottom:0;*/
 /*	right: 0;*/
 	box-shadow: -5px -5px 7px  #666;
@@ -365,5 +395,5 @@ section.extract_section{
 	font-size: 50%;
 }
 .STDgray{
-	color: #333;
+	color: #666;
 }
