--- a/04_livrable/website/punr/punr_style.css
+++ b/04_livrable/website/punr/punr_style.css
@@ -258,7 +258,10 @@ a.preceding{
 a.following{
 	margin-left: auto;
 }
-
+/*intro des articles*/
+details p {
+	font-size: 11pt;
+}
 
 /*to check use, callage ? saut sémantique ?
 ==> ajouter au rapport technique*/
